@@ -1,6 +1,11 @@
 2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Fixed memory leak
+	* src/Dictionary.cc
+
+2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Fixed memory leak
 	* src/IteratableChunkChecksumValidator.h
 
 2008-08-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
